force-app/main/default/objects/Time__c/fields/Epic__c.field-meta.xml
<CustomField>
    <fullName>Epic__c</fullName>
    <label>Epic</label>
    <referenceTo>Sprint_Items__c</referenceTo>
    <relationshipLabel>Times</relationshipLabel>
    <relationshipName>Times</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>