force-app/main/default/objects/Time__c/fields/Minutes_Logged__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Logged__c</fullName>
    <label>Minutes Logged</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>