force-app/main/default/objects/Time__c/fields/Salesforce_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Event_Id__c</fullName>
    <label>Salesforce Event Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>